syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

package users;

option java_package = "ar.edu.itba.pod.grpc.user";
//option java_outer_classname = "UserServiceModel";
option java_multiple_files = true;


service UserService {
  rpc DoLogin(LoginInformation) returns (User);
  rpc GetRoles(User) returns (UserRoles);
  rpc Register(User) returns (google.protobuf.BoolValue);
}


message LoginInformation {
  string user_name = 1;
  string password = 2;
}

message User {
  int32 id = 1;
  string user_name = 2;
  string display_name = 3;
  AccountStatus status  = 4;
  repeated string preferences = 5;
}

message UserRoles {
  map<string, Role> roles_by_site = 1;
}

enum AccountStatus {
  ACCOUNT_STATUS_UNSPECIFIED = 0;
  ACCOUNT_STATUS_PENDING = 1;
  ACCOUNT_STATUS_ACTIVE = 2;
  ACCOUNT_STATUS_SUSPENDED = 3;
  ACCOUNT_STATUS_CLOSED = 4;
}

enum Role {
  UNSPECIFIED = 0;
  ADMIN = 1;
  SELLER = 2;
  BUYER = 3;
}

